syntax = "proto3";
option go_package = "grpc_chat/proto";

message Subscribe {
  string userId = 1;
}


message Message {
  string action = 1;
  string type = 2;
  string id = 3;
  bytes body = 4;
}

message LoginRequest {
  string password = 1;
  uint64 userId = 2;
}

message LoginResponse {
  string token = 1;
}

message Empty{}